chore(config): migra tailwind css v4 para v3 com configuração tradicional

--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "^9.0.0",
@@ -90,7 +90,7 @@
     "postcss": "^8",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "ts-prune": "^0.10.3",
     "typescript": "^5"
   }
