--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@/components/*": ["src/components/*"],
       "@/features/*": ["src/features/*"],
       "@/hooks/*": ["src/hooks/*"],
-      "@/lib/*": ["src/lib/*"]
+      "@/lib/*": ["src/lib/*"],
+      "@/tests/*": ["tests/*"]
     },
     "baseUrl": "."
   },
