--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
@@ -80,8 +80,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "15.5.7",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
